force-app/main/default/objects/SVMXA360__SM_Condition__c/SVMXA360__SM_Condition__c.object-meta.xml
<CustomObject>
    <description>Stores the defined conditions for the work rules on a Maintenance Plan, which will determine when a Work order will be generated for a maintenance asset.</description>
    <label>Asset Condition</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>