force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__AdjustmentEnd__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdjustmentEnd__c</fullName>
    <description>Maximum adjustment that can be performed</description>
    <label>Maximum Adjustment Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>