force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__AdjustmentStart__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdjustmentStart__c</fullName>
    <description>Minimum difference value between actual and close reading required for adjustment to be performed</description>
    <label>Adjustment Start</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>