force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__ConditionType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConditionType__c</fullName>
    <description>Different types of Conditions supported for Maintenance plan.

Options include: Time, Frequency, Criteria</description>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequency</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>