force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__EnableIntervalAdjustment__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EnableIntervalAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field enables logic on the maintenance plan that will dynamically adjust a work rule’s forecasted milestone in order to accommodate actual work order completion and maintain the condition-based interval between frequency or calendar milestones.</description>
    <label>Enable Interval Adjustment</label>
    <type>Checkbox</type>
</CustomField>