force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldAPIName__c</fullName>
    <description>The field API name of the Asset object on which criteria to be evaluation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>