force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__MaintenanceWorkRule__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenanceWorkRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Maintenance Work Rule on which the condition is defined</description>
    <label>A360 Maintenance Work Rule</label>
    <referenceTo>SVMXA360__SM_MaintenanceWorkRule__c</referenceTo>
    <relationshipLabel>Asset Conditions</relationshipLabel>
    <relationshipName>Asset_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>