force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__MaintenanceWorkRuleTemplate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenanceWorkRuleTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Maintenance Work Rule Template on which the condition is defined</description>
    <label>Maintenance Work Rule Template</label>
    <referenceTo>SVMXA360__MaintenanceWorkRuleTemplate__c</referenceTo>
    <relationshipLabel>Asset Conditions</relationshipLabel>
    <relationshipName>Asset_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>