force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__Operand__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Operand__c</fullName>
    <description>The frequency interval at which the work order needs to be created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>