force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__Operator__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Operator__c</fullName>
    <description>Operators to indicate the relationship between the condition attribute and the condition value. Operators include:

Greater Than
Less Than
Equals To
Is Not Equal To
Every
Every Decrement</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>