force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__RecurrencePattern__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RecurrencePattern__c</fullName>
    <description>The time frequency pattern to be considered for WO generation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recurrence Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>