force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Sequence__c</fullName>
    <description>The numerical representation for the condition in advanced expression.</description>
    <label>Sequence</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>