force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__SM_CriteriaType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_CriteriaType__c</fullName>
    <description>The Criteria Type for Asset Condition.</description>
    <inlineHelpText>The Criteria Type for Asset Condition.</inlineHelpText>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSC-TA-SEARCH-CRITERIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>