force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__SM_OperandType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_OperandType__c</fullName>
    <description>The Operand Type for the Asset Condition.</description>
    <inlineHelpText>The Operand Type for the Asset Condition.</inlineHelpText>
    <label>Operand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>