force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__SM_ProductServiceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_ProductServiceCampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign related to the Asset Condition.</description>
    <inlineHelpText>The Product Service Campaign related to the Asset Condition.</inlineHelpText>
    <label>Product Service Campaign</label>
    <referenceTo>ProductServiceCampaign</referenceTo>
    <relationshipLabel>Asset Conditions</relationshipLabel>
    <relationshipName>Asset_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>