force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__StartAt__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StartAt__c</fullName>
    <description>The start value for the condition to be considered in work order generation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>