force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__StopAt__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StopAt__c</fullName>
    <description>The stop value for the condition at which work order generation to be stopped</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>