force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__TechnicalAttribute__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TechnicalAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Technical attribute of the Asset on which the readings will be tracked for possible WO generation</description>
    <label>Technical Attribute</label>
    <referenceTo>SVMXA360__SM_TA_TechnicalAttribute__c</referenceTo>
    <relationshipLabel>Asset Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>