force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__TechnicalAttributeCategory__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TechnicalAttributeCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Technical Attribute Category</description>
    <label>Technical Attribute Category</label>
    <referenceTo>SVMXA360__SM_TA_Category__c</referenceTo>
    <relationshipLabel>Asset Conditions</relationshipLabel>
    <relationshipName>Asset_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>