force-app/main/default/objects/SVMXA360__SM_Condition__c/fields/SVMXA360__Threshold__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Threshold__c</fullName>
    <description>The threshold percentage of the operand/operator value at which the WO needs to be created</description>
    <label>Threshold %</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>